<resources>
    <string name="app_name">OUMRT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">giwawa</string>
    <string name="nav_header_subtitle">GGGGIIIIWWWWAAAA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">home</string>
    <string name="menu_switch">switch</string>
    <string name="menu_history">history</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>