<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/passengerHomeFragment"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/passengerProfileFragment"
            android:icon="@drawable/icon_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/switchToDriverFragment"
            android:icon="@drawable/icon_switch"
            android:title="@string/menu_switch"
            />
        <item
            android:id="@+id/passengerPassEventsFragment"
            android:icon="@drawable/icon_history"
            android:title="@string/menu_history"
            />
    </group>
</menu>