<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.skypan.myapplication.driver_model.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_House"
        android:name="com.skypan.myapplication.driver_model.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_house" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.skypan.myapplication.driver_model.ui.Switch.SwitchFragment"
        android:label="@string/menu_switch"
        tools:layout="@layout/fragment_switch" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.skypan.myapplication.driver_model.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_test"
        android:name="com.skypan.myapplication.driver_model.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>